**  Capture an APM error and correctly set span.outcome to "failure" when
    a redis client command calls back with an error.
**  Avoid a rare possible double-instrumentation of redis commands
    internally-queued before the RedisClient is "ready". ({issues}2459[#2459])
**  Add destination context so Redis shows up on the Service Map.


[[release-notes-3.25.0]]
==== 3.25.0 2021/11/24

[float]
===== Bug fixes

* Fixes for 'redis' instrumentation:
+
**  Fix run-context so that a span created in the same tick as a redis client
    command will no longer be a child of the redis span. ({issues}2430[#2430])
**  Capture an APM error and correctly set span.outcome to "failure" when
    a redis client command calls back with an error.
**  Avoid a rare possible double-instrumentation of redis commands
    internally-queued before the RedisClient is "ready". ({pull}2446[#2446])

* Avoid setting the `tracestate` header for outgoing HTTP requests to the empty
  string. This can happen for non-trace-root transactions. While the HTTP spec
  allows empty header values, some servers do not. ({issues}2405[#2405])

* Deprecate `transaction.subtype` and `transaction.action`. These fields
  were never used by APM server. This also deprecates the
  `apm.startTransaction(...)` call signatures that take `subtype` and `action`
  arguments. In the next major version these two fields will be removed.
  ({issues}2356[#2356])

* Fix run-context handling for 'mysql' instrumentation to avoid accidental
  creation of *child* spans of the automatic 'mysql' spans.
  ({issues}2430[#2430]})


[[release-notes-3.24.0]]
==== 3.24.0 2021/11/09

[float]
===== Breaking changes

* Change <<disable-send, `disableSend`>> to no longer skip internal processing
  work. It now *only* disables communication with APM Server. Use
  <<context-propagation-only, `contextPropagationOnly`>> if your use case is
  to limit the APM agent's processing to the minimum to support context
  propagation and log correlation.
+